k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: photo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/christheoreo/photo-k8-app/api:e4d2bf468850cded7d50b352f9ed8048f47a7a81
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: photo-app
spec:
  selector:
    app: api
  ports:
  - port: 3000
    targetPort: 3000
